# MCHA4400

./: .gitignore
a1/src/: Camera.cpp  Camera.h  DuckDetectorBase.cpp  DuckDetectorBase.h  DuckDetectorONNX.cpp  DuckDetectorONNX.h  GaussianInfo.hpp  MeasurementSLAM.cpp  MeasurementSLAM.h  MeasurementSLAMDuckBundle.cpp  MeasurementSLAMDuckBundle.h  MeasurementSLAMPointBundle.cpp  MeasurementSLAMPointBundle.h  MeasurementSLAMPoseBundle.cpp  MeasurementSLAMPoseBundle.h  MeasurementSLAMUniqueTagBundle.cpp  MeasurementSLAMUniqueTagBundle.h  Plot.cpp  Plot.h  SystemSLAM.cpp  SystemSLAM.h  SystemSLAMPointLandmarks.h  SystemSLAMPoseLandmarks.cpp  SystemSLAMPoseLandmarks.h  association_util.h  calibrate.cpp  calibrate.h  funcmin.hpp  imagefeatures.cpp  imagefeatures.h  main.cpp  visualNavigation.cpp  visualNavigation.h
a1/test/src/: GaussianInfoLog.cpp  aruco.cpp  dynamics-jacobian.cpp  rotation.cpp  test-loglikelihood-derivatives.cpp  test-point-jacobians.cpp  test-pose-jacobians.cpp  trsSqrtInv.cpp
a2/: Doxyfile.in
a2/src/: BufferedVideo.h  Camera.h  DJIVideoCaption.h  MeasurementAltimeter.cpp  MeasurementAltimeter.h  MeasurementGaussianLikelihood.cpp  MeasurementGaussianLikelihood.h  MeasurementIndoorFlowBundle.cpp  MeasurementIndoorFlowBundle.h  MeasurementOutdoorFlowBundle.cpp  MeasurementOutdoorFlowBundle.h  MeasurementSLAM.h  MeasurementSLAMIdenticalTagBundle.cpp  MeasurementSLAMIdenticalTagBundle.h  MeasurementSLAMPointBundle.cpp  MeasurementSLAMPointBundle.h  Plot.cpp  Plot.h  SystemBase.cpp  SystemEstimator.cpp  SystemVisualNav.cpp  SystemVisualNav.h  SystemVisualNavPointLandmarks.cpp  SystemVisualNavPointLandmarks.h  SystemVisualNavPoseLandmarks.cpp  SystemVisualNavPoseLandmarks.h  association_util.cpp  association_util.h  calibrate.cpp  funcmin.cpp  main.cpp  rotation.hpp  visualNavigation.cpp  visualNavigation.h
a2/test/data/: DJI_0121.SRT
a2/test/src/: DJIVideoCaption.cpp  GaussianInfo.cpp  GaussianInfoJoin.cpp  GaussianInfoSimulate.cpp  camera.cpp  jointCompatibility.cpp  test-dynamics.cpp  trsSqrt.cpp
lab1/: CMakeLists.txt  Doxyfile.in
lab1/src/: main.cpp  vnorm.cpp  vnorm.h
lab1/test/src/: onnx.cpp  sanity.cpp  vnormderiv.cpp
lab10/src/: Camera.cpp  calibrate.cpp  image_flow.cpp  image_flow.h  main.cpp  rotation.hpp  serialisation.hpp
lab10/test/data/: camera.xml  camera2.xml
lab10/test/src/: camera.cpp  findFundamentalMatrixInlierThreshold.cpp  undistort.cpp
lab11/src/: BufferedVideo.cpp  DJIVideoCaption.cpp  Pose.hpp  SystemVisualNav.cpp  SystemVisualNav.h  calibrate.cpp  funcmin.hpp  main.cpp  visual_odometry.cpp  visual_odometry.h
lab11/test/src/: GaussianInfoConditional.cpp  GaussianInfoFromSamples.cpp  GaussianInfoLog.cpp  GaussianInfoMarginal.cpp  GaussianInfoTransform.cpp
lab2/src/: imagefeatures.cpp  imagefeatures.h  main.cpp
lab3/: CMakeLists.txt
lab3/python/: duck_export_with_postprocessing.py  duck_finetune.py  requirements.txt  verify_hue.py
lab3/src/: BufferedVideo.h  DuckDetectorBase.cpp  DuckDetectorONNX.h  main.cpp
lab4/src/: Camera.cpp  Camera.h  main.cpp
lab4/test/src/: camera.cpp
lab5/src/: Gaussian.cpp  Gaussian.h  main.cpp
lab5/test/src/: GaussianAdd.cpp  GaussianConditional.cpp  GaussianMarginal.cpp  GaussianPermute.cpp
lab6/: .gitignore  CMakeLists.txt
lab6/src/: DensityBase.hpp  Gaussian.hpp  GaussianBase.hpp  Measurement.cpp  Measurement.h  MeasurementGaussianLikelihood.cpp  MeasurementGaussianLikelihood.h  MeasurementRADAR.cpp  MeasurementRADAR.h  SystemBallistic.cpp  SystemBallistic.h  SystemBase.h  SystemEstimator.cpp  SystemEstimator.h  ballistic_plot.cpp  ballistic_plot.h  main.cpp
lab6/test/src/: Gaussian.cpp  GaussianConditional.cpp  GaussianConfidence.cpp  GaussianFromSamples.cpp  GaussianLog.cpp  GaussianLogIntegral.cpp  GaussianMarginal.cpp  GaussianSimulate.cpp  GaussianTransform.cpp  MeasurementRADAR.cpp  SystemBallistic.cpp  trsSqrtSparse.cpp
lab7/src/: Measurement.h  MeasurementGaussianLikelihood.cpp  MeasurementGaussianLikelihood.h  MeasurementRADAR.cpp  MeasurementRADAR.h  SystemBallistic.cpp  SystemBallistic.h  ballistic_plot.cpp  main.cpp  rosenbrock.cpp  rosenbrock.h
lab7/test/src/: GaussianInfoConfidence.cpp  MeasurementRADAR.cpp  SystemBallistic.cpp  rosenbrock.cpp
lab8/: .gitignore
lab8/src/: Camera.cpp  Camera.h  Event.h  GaussianBase.hpp  Measurement.cpp  MeasurementSLAMPointBundle.cpp  MeasurementSLAMPointBundle.h  Plot.cpp  SystemSLAM.h  SystemSLAMPointLandmarks.h  SystemSLAMPoseLandmarks.cpp  association_util.cpp  confidence_region_demo.cpp  confidence_region_demo.h  main.cpp  serialisation.hpp  to_string.hpp
lab8/test/src/: GaussianInfoLog.cpp  GaussianInfoTransform.cpp  camera.cpp  rotation.cpp  test_jacobians.cpp
lab9/data/: camera.xml  config.xml
lab9/src/: Event.cpp  MeasurementSLAMPointBundle.cpp  MeasurementSLAMPointBundle.h  Pose.hpp  SystemEstimator.cpp  SystemEstimator.h  SystemSLAM.cpp  SystemSLAMPointLandmarks.cpp  SystemSLAMPoseLandmarks.h  association_demo.cpp  association_demo.h  association_util.cpp  funcmin.hpp  image_features.cpp  image_features.h  main.cpp  plot_util.cpp  plot_util.h  rotation.hpp
lab9/test/src/: GaussianInfoConfidence.cpp  GaussianInfoLogIntegral.cpp  GaussianInfoSimulate.cpp  individualCompatibility.cpp  jointCompatibility.cpp  main.cpp  rotation.cpp  trsEig.cpp
